# fastapi_pgvector

./: .gitignore  Dockerfile  README.md  database.py  docker-compose.yaml  index.html  main.py  pyproject.toml  vectorizer.py
.github/workflows/: cd.yml  ci.yml
examples/: vector_demo.py
tests/: test_main.py
