[project]
name = "pgvector"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "sentence-transformers>=5.1.0",
    "uvicorn>=0.35.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]